[gd_scene load_steps=2 format=3 uid="uid://bcyyejb6kghjn"]

[ext_resource type="Script" path="res://src/ui/menus/lobby/lobby.gd" id="1_tquf2"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tquf2")

[node name="PanelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -565.5
offset_top = -260.0
offset_right = 565.5
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Lobby Scene
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="HostButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "Host Game"

[node name="JoinButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "Join Game"

[node name="HostGamePanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -485.0
offset_top = -219.0
offset_right = 485.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HostGamePanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="HostGamePanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartGame Button" type="Button" parent="HostGamePanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 60
text = "Start Game"

[node name="StopHostingGame Button" type="Button" parent="HostGamePanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 60
text = "Stop Hosting Game"
autowrap_mode = 3

[node name="ConnectToHost Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -477.0
offset_top = 395.0
offset_right = -40.0
offset_bottom = 1026.0
grow_horizontal = 0

[node name="Connected To Host" type="Label" parent="ConnectToHost Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.5
offset_top = -190.5
offset_right = 219.5
offset_bottom = 191.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "Connected to Host"
autowrap_mode = 3

[connection signal="pressed" from="PanelContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="HostGamePanelContainer/MarginContainer/HBoxContainer/StartGame Button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="HostGamePanelContainer/MarginContainer/HBoxContainer/StopHostingGame Button" to="." method="_on_stop_hosting_game_button_pressed"]
